<resources>
    <string name="app_name">AdsBoard</string>

    <!-- Ресурсы для меню "Объявления" -->
    <string name="ads_menu">Объявления</string>
    <string name="my_ads_item">Мои объявления</string>
    <string name="car_item">Авто</string>
    <string name="mobile_phones_item">Мобильные телефоны</string>
    <string name="computer_item">Компьюетры</string>
    <string name="appliances_item">Бытовая техника</string>

    <!-- Ресурсы для меню "Аккаунт" -->
    <string name="account_menu">Аккаунт</string>
    <string name="login_item">Вход</string>
    <string name="logout_item">Выход</string>
    <string name="registration_item">Регистрация</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    
    <!-- Ресурсы для Alert Dialog -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Зарегистрироваьтся</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_pass">Забыли пароль?</string>
</resources>